# ChangeLog for net-mail/email
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-mail/email/ChangeLog,v 1.23 2008/06/10 18:48:17 dertobi123 Exp $

*email-3.0.5 (10 Jun 2008)

  10 Jun 2008; Tobias Scherbaum <dertobi123@gentoo.org> -email-2.5.1.ebuild,
  +email-3.0.5.ebuild:
  Version bump (#225445)

  30 May 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing Andrej Kacian (Ticho) from metadata.xml (as per #59986).

  12 Jun 2007; Marius Mauch <genone@gentoo.org> email-2.5.0.ebuild,
  email-2.5.1.ebuild:
  Replacing einfo with elog

  04 Mar 2007; Andrej Kacian <ticho@gentoo.org> -email-2.3.4.ebuild,
  email-2.5.0.ebuild, email-2.5.1.ebuild:
  Look for CLOCK setting in /etc/conf.d/net, where it's been moved. Bug
  #169338, reported by Gerben Vos <gpvos+gnt at xs4all.nl>. Removed ebuild for
  2.3.4.

*email-2.5.1 (19 Dec 2006)

  19 Dec 2006; Andrej Kacian <ticho@gentoo.org> +email-2.5.1.ebuild:
  Version bump.

  12 Oct 2006; Fernando J. Pereda <ferdy@gentoo.org> email-2.5.0.ebuild:
  Stable on alpha as per bug #149932

  04 Oct 2006; Simon Stelling <blubb@gentoo.org> email-2.5.0.ebuild:
  stable on amd64

  03 Oct 2006; <ticho@gentoo.org> email-2.5.0.ebuild:
  Stable on x86, bug #149932.

  03 Oct 2006; <ticho@gentoo.org> -email-2.3.0.ebuild, -email-2.3.2.ebuild,
  -email-2.3.3.ebuild:
  Pruned old ebuilds.

*email-2.5.0 (16 Aug 2006)

  16 Aug 2006; Andrej Kacian <ticho@gentoo.org> +email-2.5.0.ebuild:
  Version bump.

  30 May 2005; Fernando J. Pereda <ferdy@gentoo.org> email-2.3.4.ebuild:
  Stable on alpha

  14 May 2005; Fernando J. Pereda <ferdy@gentoo.org> email-2.3.4.ebuild:
  keyworded ~alpha

  01 May 2005; Tom Martin <slarti@gentoo.org> email-2.3.4.ebuild:
  Stable on amd64.

  27 Apr 2005; Andrej Kacian <ticho@gentoo.org> email-2.3.3.ebuild,
  email-2.3.4.ebuild:
  Stable on x86.

*email-2.3.4 (20 Apr 2005)

  20 Apr 2005; Andrej Kacian <ticho@gentoo.org> email-2.3.3.ebuild,