@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<herd>net-mail</herd>
-	<longdescription lang="en">
+<maintainer>
+  <email>deathwing00@gentoo.org</email>
+  <name>Ioannis Aslanidis</name>
+</maintainer>
+<herd>net-mail</herd>
+  <longdescription lang="en">
 		Advanced CLI tool for sending mail.
-	</longdescription>
+  </longdescription>
 </pkgmetadata>
