@@ -1,6 +1,12 @@
 # ChangeLog for net-mail/email
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-mail/email/ChangeLog,v 1.23 2008/06/10 18:48:17 dertobi123 Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-mail/email/ChangeLog,v 1.24 2009/03/20 16:52:08 deathwing00 Exp $
+
+*email-3.1.2 (20 Mar 2009)
+
+  20 Mar 2009; Ioannis Aslanidis <iaslanidis@gentoo.org> metadata.xml,
+  +email-3.1.2.ebuild:
+  Version bump. Compiles correctly with --as-needed. Fixed RDEPEND.
 
 *email-3.0.5 (10 Jun 2008)
 
